# lp-glsl-vm

./: .cursorrules  .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml  test_fib_hardware.rs
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
apps/embive-program/: Cargo.toml
apps/embive-program/.cargo/: config.toml
apps/embive-program/src/: jit_test.rs  main.rs
apps/esp32c3-jit-test/: Cargo.toml  README.md  build.rs
apps/esp32c3-jit-test/.cargo/: config.toml
apps/esp32c3-jit-test/src/: main.rs
crates/embive-program/: Cargo.toml  build.rs  memory.ld
crates/embive-runtime/: Cargo.toml
crates/embive-runtime/src/: alloc.rs  lib.rs  print.rs
crates/lp-glsl-vm/: Cargo.toml
crates/lp-glsl-vm/src/: lib.rs  r5vm.rs
crates/lp-glsl-vm/tests/: embive_test.rs  test_glsl_parser.rs
crates/lpc-codegen/: Cargo.toml
crates/lpc-codegen/src/: elf.rs  lib.rs
crates/lpc-codegen/src/backend3/: blockorder.rs  branch.rs  constants.rs  lower.rs  mod.rs  regalloc.rs  reloc.rs  symbols.rs  types.rs  vcode.rs  vcode_builder.rs
crates/lpc-codegen/src/backend3/tests/: blockorder_edge_tests.rs  blockorder_tests.rs  cfg_patterns_tests.rs  clobber_tests.rs  constants_tests.rs  emission_tests.rs  integration_tests.rs  lower_tests.rs  mod.rs  operand_collection_completeness_tests.rs  operand_tests.rs  regalloc_tests.rs  reloc_tests.rs  srcloc_tests.rs  vcode_invariants_tests.rs  vcode_test_helpers.rs  vcode_tests.rs
crates/lpc-codegen/src/emu/: executor.rs
crates/lpc-codegen/src/isa/riscv32/: asm_parser.rs  decode.rs  disasm.rs  encode.rs  inst.rs  inst_buffer.rs  mod.rs
crates/lpc-codegen/src/isa/riscv32/backend/lower/: arithmetic.rs  call.rs
crates/lpc-codegen/src/isa/riscv32/backend/tests/: comparison_tests.rs
crates/lpc-codegen/src/isa/riscv32/backend3/: abi.rs  emit.rs  inst.rs  lower.rs  mod.rs  regs.rs  vcode_format.rs  vcode_parser.rs
crates/lpc-codegen/src/isa/riscv32/backend_old/: abi.rs  regalloc.rs
crates/lpc-codegen/src/isa/riscv32/backend_old/lower/: iconst.rs  return_.rs
crates/lpc-codegen/src/isa/riscv32/backend_old/tests/: branch_tests.rs  call_tests.rs
crates/lpc-codegen/src/isa/riscv32/test_util/: emulator_runner.rs  r5_fn_test.rs
crates/lpc-codegen/tests/: emu_basic.rs  emu_memory.rs  fib_hardware_test.rs  stack_tests.rs  test_module_instruction_sequence.rs
crates/lpc-filetests/: Cargo.toml
crates/lpc-glsl/: Cargo.toml
crates/lpc-glsl/src/: codegen.rs  error.rs  lib.rs  parser.rs  symbols.rs  typecheck.rs  types.rs
crates/lpc-glsl/src/codegen/: builder.rs  loop.rs  mod.rs  scope.rs  ssa.rs  ssa_tests.rs  value.rs
crates/lpc-glsl/src/control/: codegen.rs  mod.rs  typecheck.rs
crates/lpc-glsl/src/decl/: codegen.rs  mod.rs  typecheck.rs
crates/lpc-glsl/src/expr/: codegen.rs  mod.rs  typecheck.rs
crates/lpc-glsl/src/function/: codegen.rs  mod.rs  typecheck.rs
crates/lpc-glsl/src/stmt/: codegen.rs  mod.rs  typecheck.rs
crates/lpc-glsl/src/util/: mod.rs  type_extract.rs  variable_refs.rs
crates/lpc-glsl/tests/: complex_tests.rs  edge_case_tests.rs  error_tests.rs  expression_tests.rs  for_tests.rs  function_tests.rs  glsl_test.rs  if_tests.rs  literal_tests.rs  variable_tests.rs  while_tests.rs
crates/lpc-lpir/: Cargo.toml  README.md
crates/lpc-riscv32/: Cargo.toml
crates/lpc-riscv32/src/: debug.rs  decode.rs  disasm.rs  encode.rs  inst.rs  inst_buffer.rs  lib.rs  register_role.rs
crates/lpc-riscv32/src/backend/: abi.rs  compile.rs  emit.rs  frame.rs  liveness.rs  mod.rs  regalloc.rs  register_role.rs  spill_reload.rs  test_helpers.rs
crates/lpc-riscv32/src/backend/lower/: arithmetic.rs  branch.rs  call.rs  comparisons.rs  debug.rs  epilogue.rs  function.rs  helpers.rs  iconst.rs  mod.rs  prologue.rs  return_.rs  syscall.rs  types.rs
crates/lpc-riscv32/src/backend/tests/: branch_tests.rs  call_tests.rs  comparison_tests.rs  iconst_tests.rs  mod.rs  phi_tests.rs
crates/lpc-riscv32/src/emu/: decoder.rs  emulator.rs  executor.rs  mod.rs  test_helpers.rs
crates/lpc-riscv32/src/test_util/: mod.rs  r5_fn_test.rs  vm_runner.rs
crates/lpc-riscv32/tests/: emu_basic.rs  emu_memory.rs  fib_hardware_test.rs  stack_tests.rs  test_module_instruction_sequence.rs
crates/r5-builder/: Cargo.toml
crates/r5-ir/: Cargo.toml
crates/r5-target-riscv32/: Cargo.toml
crates/r5-target-riscv32/src/: abi.rs  elf.rs  emit.rs  frame.rs  lib.rs  liveness.rs  lower.rs  regalloc.rs  register_role.rs  spill_reload.rs  test_helpers.rs
crates/r5-target-riscv32/src/lower/: arithmetic.rs  branch.rs  call.rs  comparisons.rs  debug.rs  epilogue.rs  function.rs  helpers.rs  iconst.rs  mod.rs  prologue.rs  return.rs  return_.rs  syscall.rs  types.rs
crates/r5-target-riscv32/tests/: branch_tests.rs  caller_saved.rs  fib_hardware_test.rs  stack_args.rs  stack_tests.rs  temp_spill_slots.rs  test_module_instruction_sequence.rs
crates/r5-test-util/: Cargo.toml
crates/r5-test-util/src/: emulator_runner.rs  lib.rs  r5_fn_test.rs  vm_runner.rs
crates/r5-test-util/tests/: test_example.rs
crates/riscv-shared/: Cargo.toml
crates/riscv-shared/src/: lib.rs
crates/riscv32-emulator/: Cargo.toml
crates/riscv32-encoder/: Cargo.toml
crates/runtime-embive/: Cargo.toml
docs/: riscv32-abi.md  riscv64-abi.md
docs/glsl/: 01-initial-work.md  02-codegen.md  03-architecture.md  04-lazy-dominance-ssa.md  04.1-cleanup-1.md  05-values.md  06-dom-fixes.md  07-dom-fixes-2.md
docs/plans/: 01-compiler-architecture.md  01-riscv32-instruction-support.md  02-test-utility-builder.md  03-riscv32-instruction-support.md  04-register-management-and-abi.md  05-register-fixes.md  06-register-allocation.md  07-many-function-args.md  08-improve-lower-arch.md  09-multi-return.md  10-backend-rewrite.md  10.1-branch-lowering.md  10.2-layout-and-values.md  10.3-phi-nodes.md  10.4-fix-blocks.md  10.5-call-handling.md  11-lpir-dominance.md  12-lpir-enhancement.md  13-lpir-enhancement-2.md  14-lpir-additional-instructions.md  (+30 more)
scripts/: validate-branch-name.sh  validate-commit-msg.sh
tests/: dep_test.rs
(+119 files in other folders)
