[workspace]
members = [
    "crates/lp-glsl-vm",
    "crates/embive-runtime",
    "apps/embive-program",
    "crates/riscv32-encoder",
    "crates/riscv32-emulator",
    "crates/r5-ir",
    "crates/r5-builder",
    "crates/r5-target-riscv32",
    "crates/riscv-shared",
    "crates/r5-test-util",
]
default-members = [
    "crates/lp-glsl-vm",
    "crates/riscv32-encoder",
    "crates/riscv32-emulator",
    "crates/r5-ir",
    "crates/r5-builder",
    "crates/r5-target-riscv32",
    "crates/r5-test-util",

# cross compile crates should not be default members
#    "crates/embive-runtime",
#    "apps/embive-program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
