[workspace]
members = [
    "crates/lp-glsl-vm",
    "crates/runtime-embive",
    "apps/embive-program",
    "apps/esp32c3-jit-test",
    "crates/lpc-riscv32",
    "crates/lpc-lpir",
    "crates/riscv-shared",
]
default-members = [
    "crates/lp-glsl-vm",
    "crates/lpc-riscv32",
    "crates/lpc-lpir",

# cross compile crates should not be default members
#    "crates/runtime-embive",
#    "apps/embive-program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
