[workspace]
members = [
    "crates/lp-glsl-vm",
    "crates/runtime-embive",
    "apps/embive-program",
    "apps/esp32c3-jit-test",
    "crates/lpc-codegen",
    "crates/lpc-glsl",
    "crates/lpc-lpir",
    "crates/lpc-filetests",
    "crates/riscv-shared",
]
default-members = [
    "crates/lp-glsl-vm",
    "crates/lpc-codegen",
    "crates/lpc-lpir",

# cross compile crates should not be default members
#    "crates/runtime-embive",
#    "apps/embive-program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
