[package]
name = "embive-program"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "embive-program"
path = "src/main.rs"
test = false

[dependencies]
embive-runtime = { path = "../../crates/embive-runtime" }
embive = { path = "/Users/yona/dev/opensource/embive", default-features = false, features = ["transpiler"] }
elf = { version = "0.8.0", default-features = false }
riscv-shared = { path = "../../crates/riscv-shared" }

[build-dependencies]

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"

[target.riscv32imac-unknown-none-elf]

