[package]
name = "embive-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
test = false

[dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
linked_list_allocator = "0.10"

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"

[target.riscv32imac-unknown-none-elf]

