[package]
name = "lpc-riscv32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V 32-bit instruction encoder"

[lib]

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }
lpc-lpir = { path = "../lpc-lpir" }

[dev-dependencies]
