[package]
name = "r5-target-riscv32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V 32-bit target implementation"

[lib]

[dependencies]
r5-ir = { path = "../r5-ir" }
riscv32-encoder = { path = "../riscv32-encoder" }
riscv32-emulator = { path = "../riscv32-emulator" }

[dev-dependencies]
r5-builder = { path = "../r5-builder" }
r5-test-util = { path = "../r5-test-util" }

