[package]
name = "riscv-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared code for RISC-V JIT testing"

[lib]

[dependencies]
r5-builder = { path = "../r5-builder" }
r5-ir = { path = "../r5-ir" }
r5-target-riscv32 = { path = "../r5-target-riscv32" }



